# RP2040_FreeRTOS_Start_Project

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  FreeRTOSConfig.h  application.c  application.h  main.c
